# ygo-effect-dsl

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: pull_request_template.md  release-governance.yml
.github/ISSUE_TEMPLATE/: anonymous-validation-report.md  release-work-item.yml
.github/workflows/: analytics-scale-calibration.yml  build-windows-exe.yml  real-core-self-hosted-smoke.yml  representative-golden-preview.yml  test.yml
docs/: 00_project_charter.md  10_architecture.md  20_roadmap.md  30_glossary.md  40_documentation_policy.md  50_anonymous_validation_format.md  90_hourly_brainstorm.md  architecture.md  documentation_policy.md  glossary.md  hourly_brainstorm.md  roadmap.md
docs/adr/: 0000_project_charter.md  (+19 more)
examples/: sample_cards.jsonl
scripts/: run_pipeline.ps1
tests/: conftest.py  test_action_aggregation.py  test_action_models.py  test_actions_migration.py  test_activation_rollback_audit.py  test_additional_card_attribution.py  test_additional_card_attribution_v2.py  test_aggregation_catalog_evidence.py  test_analytics_comparison.py  test_analytics_export.py  test_analytics_export_evidence.py  test_analytics_query.py  test_analytics_scale_calibration.py  test_analyze_report.py  test_architecture_freeze.py  test_bridge_v02.py  test_card_instance_identity.py  test_card_instance_identity_v2.py  test_card_instance_movement_v2.py  test_card_presentation.py  test_clean_bootstrap_qualification.py  test_cli_module_smoke.py  test_compile_smoke.py  test_corpus_manifest.py  test_cross_channel_ordering.py  test_desktop_bridge.py  test_desktop_bridge_smoke.py  test_desktop_frontend.py  test_desktop_lifecycle.py  test_desktop_lifecycle_evidence.py  test_desktop_shell.py  test_desktop_virtual_table.py  test_direct_random_trace_evidence.py  test_distribution_policy.py  test_evaluator_api.py  test_experiment_schema.py  test_failure_policy.py  test_general_search_benchmark.py  test_information_access.py  test_information_artifact_audit.py  (+82 more)
wiki/: 00_Home.md  10_Getting-Started.md  20_Concepts.md  30_Spec-Index.md  40_Spec-Status.md  50_Examples-Gallery.md  60_FAQ.md  70_Roadmap.md  Concepts.md  Examples-Gallery.md  FAQ.md  Getting-Started.md  Home.md  Roadmap.md  Spec-Index.md  Spec-Status.md
(+433 files in other folders)
