[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ygo-effect-dsl"
dynamic = ["version"]
description = "Reproducible Yu-Gi-Oh! route search and Route Information DSL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
analytics = [
  "pyarrow==25.0.0",
]

[project.scripts]
ygo-effect-dsl = "ygo_effect_dsl.cli.main:main"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "ygo_effect_dsl.version.__version__"}

[tool.setuptools.package-data]
"ygo_effect_dsl.resources" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
